e2e/multi-node/kind-config.yaml
kind: Cluster
apiVersion: kind.sigs.k8s.io/v1alpha3
nodes:
- role: control-plane
- role: worker
  extraPortMappings:
  - containerPort: 80
    hostPort: 80
  - containerPort: 443
    hostPort: 443
  - containerPort: 5000
    hostPort: 5000
  - containerPort: 30500
    hostPort: 30500
- role: worker
  extraPortMappings:
  - containerPort: 4000
    hostPort: 4000
  - containerPort: 3000
    hostPort: 3000
  - containerPort: 30400
    hostPort: 30400
  - containerPort: 30300
    hostPort: 30300
