e2e/multi-node/replace_ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.class: zorp
spec:
  rules:
  - http:
      paths:
        - path: /http-app-1
          backend:
            serviceName: http-app-svc-1
            servicePort: 5000
        - path: /http-app-2
          backend:
            serviceName: http-app-svc-2
            servicePort: 4000
        - path: /http-app-3
          backend:
            serviceName: http-app-svc-2
            servicePort: 3000
